fixed spacing issue.

--- a/story-con/src/App.css
+++ b/story-con/src/App.css
@@ -22,15 +22,14 @@ html, body {
     color: #264653;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;  /* Ensures the app takes full screen height */
+    min-height: 100vh;
 }
 
 .body {
-    flex-grow: 1;  /* Ensures the body takes the remaining space */
+    flex: 1; 
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    align-items: flex-start;
+    flex-direction: row;
     margin-top: 0;
 }
 
@@ -40,4 +39,5 @@ footer {
     align-items: center;
     padding: 1rem;
     background-color: #86B6A9;
+    margin-top: auto;
 }
